Some style tweaks.

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -31,9 +31,7 @@
         <p>Na&nbsp;počátku stála sdílená nepohoda z&nbsp;přístupu některých chovatelů psů k&nbsp;provozování jejich koníčka. Špína v&nbsp;ulicích se nám zdála již více nesnesitelnou.</p>
         <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v&nbsp;nás zlomilo a řekli jsme si, že s&nbsp;tím něco uděláme společně.</p>
         <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování, či&nbsp;podpora dalších prospěšných místních aktivit.</p>
-      </section>
-      <section class="stanovy">
-        <p><a href="assets/stanovy.pdf">Stanovy spolku</a></p>
+        <p class="stanovy"><a href="assets/stanovy.pdf">Stanovy spolku</a></p>
       </section>
 
 
