--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -13,45 +13,64 @@
 
   </head>
   <body>
-    <main>
       <header>
-        <a class="button" href="{{ "/" | relative_url }}">
-          <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
-          <h1>Okrašlovací spolek <br/> v Holešovicích&ndash;Bubnech</h1>
-        </a>
+          <div class="logo-container">
+              <a class="button" href="{{ "/" | relative_url }}">
+                <img src="{{ "/assets/images/hobutrol-logo-3.svg" | relative_url }}" alt="Logo okrašlovacího spolku v Holešovicích - Bubnech"/>
+              </a>
+          </div>
       </header>
+      <main>
+          <section class="caption">
+              <h1>&bdquo;Okrašlujeme, tedy jsme&ldquo;, Okrašlovací spolek v Holešovicích–Bubnech</h1>
+              <p>Okrašlovací spolek v&nbsp;Holešovicích&ndash;Bubnech usiluje o&nbsp;zlepšení prostředí kolem nás. Na&nbsp;počátku stála sdílená nepohoda z&nbsp;přístupu některých chovatelů psů k&nbsp;provozování jejich koníčka. Špína v&nbsp;ulicích se nám zdála již více nesnesitelnou.</p>
+              <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v&nbsp;nás zlomilo a řekli jsme si, že s&nbsp;tím něco uděláme společně.</p>
+              <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování, či&nbsp;podpora dalších prospěšných místních aktivit.</p>
+              <p class="stanovy"><a href="assets/stanovy.pdf">Stanovy spolku</a></p>
+          </section>
 
-      <section>
-        {{content}}
-      </section>
+          <section>
+              <h1>Akce spolku</h1>
 
-      <section class="caption">
-        <h1>&bdquo;Okrašlujeme, tedy jsme&ldquo;</h1>
-        <p>Okrašlovací spolek v&nbsp;Holešovicích&ndash;Bubnech usiluje o&nbsp;zlepšení prostředí kolem nás.</p>
-        <p>Na&nbsp;počátku stála sdílená nepohoda z&nbsp;přístupu některých chovatelů psů k&nbsp;provozování jejich koníčka. Špína v&nbsp;ulicích se nám zdála již více nesnesitelnou.</p>
-        <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v&nbsp;nás zlomilo a řekli jsme si, že s&nbsp;tím něco uděláme společně.</p>
-        <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování, či&nbsp;podpora dalších prospěšných místních aktivit.</p>
-        <p class="stanovy"><a href="assets/stanovy.pdf">Stanovy spolku</a></p>
-      </section>
-
+              <div class="events-list">
+                  <article>
+                      <div class="date">
+                          <span class="day">27</span>
+                          <span class="month">Června</span>
+                          <span class="time">15:00</span>
+                      </div>
+                      <div class="description">
+                          <h1>Pohovnění 2020</h1>
+                          <p>Letošní Pohovnění se bude konat 27. června, od 15 hodin. Jako obvykle na grilovacím místě ve Stromovce u mostu na Císařský ostrov.</p>
+                          <h2>Program</h2>
+                          <ul>
+                              <li>Běh na 5 km</li>
+                              <li>Závody a soutěže pro děti</li>
+                              <li>Zajímavý (ne)kulturní program</li>
+                          </ul>
+                      </div>
+                  </article>
+              </div>
+          </section>
+      </main>
 
       <footer>
-        <header>
-          Okrašlovací spolek v&nbsp;Holešovicích–Bubnech
-        </header>
-        <p>Email: <a href="mailto:spravni-rada@oshb.cz">spravni-rada@oshb.cz</a></p>
-        <p>
-          Schnirchova&nbsp;1084/29<br>
-          Holešovice<br>
-          170&nbsp;00 Praha&nbsp;7
-        </p>
-        <p>
-          IČO: 0298&nbsp;8470<br>
-          Spisová značka: L 60739 vedená u&nbsp;Městského soudu v Praze
-        </p>
+          <div>
+              <header>
+                  Okrašlovací spolek v&nbsp;Holešovicích–Bubnech
+              </header>
+              <p>Email: <a href="mailto:spravni-rada@oshb.cz">spravni-rada@oshb.cz</a></p>
+              <p>
+                  Schnirchova&nbsp;1084/29<br>
+                  Holešovice<br>
+                  170&nbsp;00 Praha&nbsp;7
+              </p>
+              <p>
+                  IČO: 0298&nbsp;8470<br>
+                  Spisová značka: L 60739 vedená u&nbsp;Městského soudu v Praze
+              </p>
+          </div>
       </footer>
-
-    </main>
 
   </body>
 </html>
