--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -49,6 +49,9 @@
                               <li>Zajímavý (ne)kulturní program</li>
                           </ul>
                       </div>
+                      <div>
+                          <img style="height: 100%" src="{{ "/assets/images/screenshot_pozvanka.png" | relative_url }}">
+                      </div>
                   </article>
               </div>
           </section>
