--- a/docs/_sass/_home.scss
+++ b/docs/_sass/_home.scss
@@ -22,7 +22,7 @@ section {
 
 .events-list {
   article {
-    flex: 0 1 calc(30 * 1.618rem);
+    //flex: 0 1 calc(30 * 1.618rem);
 
     & > div {
       flex-direction: column;
