--- a/docs/_sass/_footer.scss
+++ b/docs/_sass/_footer.scss
@@ -10,7 +10,13 @@ body > footer {
     flex-direction: column;
   }
 
+  hr {
+    border: 0 none;
+    border-top: 1px solid rgba(255, 255, 255, .1);
+    width: 100%;
+  }
+
   margin: calc(5 * 1.618rem) 0 0;
-  font-size: .8rem;
+  font-size: 90%;
   border-top: 1px solid;
 }
