--- a/docs/_sass/_home.scss
+++ b/docs/_sass/_home.scss
@@ -21,8 +21,10 @@ section {
 }
 
 .events-list {
+  flex-wrap: wrap;
+
   article {
-    //flex: 0 1 calc(30 * 1.618rem);
+    margin-bottom: 1.618rem;
 
     & > div {
       flex-direction: column;
@@ -40,7 +42,7 @@ section {
       }
       .month, .time {
         font-size: 85%;
-        line-height: 150%;
+        line-height: 200%;
       }
       .time {
         font-weight: 700;
