--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -46,7 +46,7 @@
                           <p>{{ event.description }}</p>
 
                           {% if event.agenda %}
-                          <h2>Program</h2>
+                          <h2>Čeká Vás:</h2>
                           <ul>
                               {% for item in event.agenda %}
                               <li>{{ item.item }}</li>
